# laddy

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  USAGE.md  audit-c2c3-handoff.md  audit-engine-rest-handoff.md  env.local.example  env.vps.example  local.conf.example  pyproject.toml  requirements-dev.txt  setup.md  tasks_for_vps.md  vps.conf.example
.laddy/: policy.toml
CLAUDE/: engine-vs-target.md  gate.md  trust-and-merge.md
docker/: Dockerfile.test  Dockerfile.test.dockerignore  compose.test.yml
docs/: smoke-test.md
monitoring/: README.md  install.sh  uninstall.sh
note_server/: README.md  __init__.py  config.py  server.py  totp.py  writer.py
oracle/: classes.md
orchestrator/: __init__.py  agent_retry.py  agents.py  artifacts.py  clarify.py  config.py  fingerprint.py  flags.py  fsutil.py  gitdiff.py  gitops.py  handoff.py  hub_tripwire.py  human_text.py  local_merge.py  loop.py  merge_check.py  merge_check_local.py  merge_subject.py  policy.py  queue.py  quota.py  remote_ask.py  run.py  spec.py  target_policy.py  terminals.py  testgate.py  verdict.py
phone/: __init__.py  handlers.py  laddy-phone.service  server.py
prompts/: oracle-task-review.md  self-improvement-audit.md
roles/: debugger.md  developer.md  explorer.md  investigator.md  rw1.md  rw2.md  security.md  senior-reviewer.md  verify.md
scripts/: colorize-log.sh  create-spec.sh  kickoff.sh  local-onboard.sh  local-task.sh  merge-verified.sh  phone.sh  push-hub.sh  smoke-review-cli.sh  upgrade_laddy.sh  vps-onboard.sh  watch-vps.sh  why-crashed.sh
security/: gitleaks.toml  semgrep.yml
specs/: agent-dev-loop-slice1.md  claude-md-and-guides.md  compliance-gate.md  game-type-payload-convergence.md  local-smoke.md  merge-safety-confirmation.md  operational-memory.md  quota-resume-queue.md  smoke-1.md  stale-task-heartbeat.md  status-dashboard.md  task-flags.md
tests/: conftest.py  fakes.py  test_action_registry.py  test_agents.py  test_artifacts.py  test_clarify.py  test_config.py  test_create_spec_launcher.py  test_engine_paths.py  test_fakes.py  test_fingerprint.py  test_flags.py  test_fsutil.py  test_gitops.py  test_handoff.py  test_human_text.py  test_kickoff_wiring.py  test_local_fix_check.py  test_local_merge.py  test_loop.py  test_loop_director_resume.py  test_loop_policy.py  test_loop_quota.py  test_loop_report_only.py  test_loop_resume.py  test_loop_rw2.py  test_loop_senior.py  test_merge_check.py  test_merge_verified_launcher.py  test_oracle_cli.py  (+26 more)
(+217 files in other folders)
