[project]
name = "laddy-note-server"
version = "0.1.0"
requires-python = ">=3.11"
# The repo's first (and only) runtime dependency: the MCP Python SDK, used by
# note_server for its Streamable-HTTP transport. The gate image installs it via
# requirements-dev.txt (the Dockerfile never runs `pip install .`).
dependencies = ["mcp"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I"]

[tool.basedpyright]
pythonVersion = "3.11"
include = ["orchestrator", "note_server", "tests"]
# Errors are the gate (0, honestly - task 15 audit); warnings (1.4k, mostly
# reportAny/reportUnusedCallResult noise pre-dating any basedpyright gate)
# stay visible but non-blocking. failOnWarnings only affects exit-code
# gating, not which diagnostics are reported - no rule category is disabled.
failOnWarnings = false
# Honor `# type: ignore[...]` suppressions the code already relies on (e.g.
# the fcntl=None Windows fallback in artifacts.py, and os.fspath(object) test
# fakes in loop_monitor). This matches pyright's own default; some basedpyright
# builds default it off, which turns those intentional, hand-vetted
# suppressions into hard gate errors. Set it explicitly so the gate is
# reproducible across environments.
enableTypeIgnoreComments = true

[[tool.basedpyright.executionEnvironments]]
root = "tests/loop_monitor"
extraPaths = ["monitoring"]

[tool.pytest.ini_options]
testpaths = ["tests"]
